force-app/main/default/objects/Game__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>What time did the match end?</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>