force-app/main/default/objects/Game__c/fields/Player_1__c.field-meta.xml
<CustomField>
    <fullName>Player_1__c</fullName>
    <formula>Match__r.Player_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Player 1</label>
    <type>Text</type>
</CustomField>