force-app/main/default/objects/Game__c/fields/Player_2__c.field-meta.xml
<CustomField>
    <fullName>Player_2__c</fullName>
    <formula>Match__r.Player_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Player 2</label>
    <type>Text</type>
</CustomField>