force-app/main/default/objects/Game__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>What time did the game start?</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>